fix: styling for checkboxPrompt now doesn't have overlapping elements
fixed the styling by providing additional margin & added gap between checkboxes

fix #393

--- a/src/styles.css
+++ b/src/styles.css
@@ -134,9 +134,11 @@
 }
 
 .checkboxRowContainer {
+	margin: 30px 0px;
 	display: grid;
 	grid-template-rows: auto;
 	align-content: center;
+	gap: 5px;
 }
 
 .checkboxRow {
